--- a/style.css
+++ b/style.css
@@ -400,3 +400,8 @@
                 max-width: 450px;
             }
         }
+            .logo-img {
+                height: 50px;
+                width: auto;
+                margin-right: 10px;
+            }
